syntax="proto3";

package gophkeeper;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = "gophkeeper/proto";

message AuthLoginRequest{
  string login=1;
  string password=2;
}
message AuthLoginResponse{
  uint32 id=1;
  string error=2;
}
message GetDataRequest{
  string data_id=1;
}
message Data{
  string data_id=1;
  string data=2;
  string meta_info=3;
  bool deleted=4;
  google.protobuf.Timestamp changed_at = 5;

}
message GetDataResponse{
  Data data=1;
  string error =2;
}

message AddDataRequest{
  Data data=1;
}
message AddDelDataResponse{
  string error=1;
}
message SynchronizationResponse{
  repeated Data data=1;
  string error=2;
}
message ClientSyncRequest{
  repeated Data data=1;
}
service Gophkeeper{
  rpc Login(AuthLoginRequest) returns (AuthLoginResponse);
  rpc Auth(AuthLoginRequest) returns (AuthLoginResponse);
  rpc AddData(AddDataRequest) returns (google.protobuf.Empty);
  rpc GetData(GetDataRequest)returns (GetDataResponse);
  rpc Sync(google.protobuf.Empty)returns (SynchronizationResponse);
  rpc ClientSync(ClientSyncRequest)returns(google.protobuf.Empty);
  rpc DelData(GetDataRequest)returns (google.protobuf.Empty);
}